refactored code and started exercise 2

--- a/dia3/index.html
+++ b/dia3/index.html
@@ -10,6 +10,8 @@
     <form>
       <label for= "name">Nome: </label>
       <input type="text" id="name" name="name" data-js="name">
+      <div data-js="form">
+      </div>
     </form>
     <script type="module" src="/src/main.js"></script>
   </body>
