--- a/dia3/index.html
+++ b/dia3/index.html
@@ -15,15 +15,15 @@
     </form>
     <form data-js="cars-form">
       <label for="car-image">Imagem (URL):</label>
-      <input type="text" id="car-image" name="car-image" data-js="car-image">
+      <input required type="text" id="car-image" name="car-image" data-js="car-image">
       <label for="car-make-model">Marca/modelo:</label>
-      <input type="text" id="car-make-model" name="car-make-model" data-js="car-make-model">
+      <input required type="text" id="car-make-model" name="car-make-model" data-js="car-make-model">
       <label for="car-year">Ano:</label>
-      <input type="number" id="car-year" name="car-year" data-js="car-year">
+      <input required type="number" id="car-year" name="car-year" data-js="car-year">
       <label for="car-license-plate">Placa:</label>
-      <input type="text" id="car-license-plate" name="car-license-plate" data-js="car-license-plate">
+      <input required type="text" id="car-license-plate" name="car-license-plate" data-js="car-license-plate">
       <label for="car-color">Cor:</label>
-      <input type="text" id="car-color" name="car-color" data-js="car-color">
+      <input required type="text" id="car-color" name="car-color" data-js="car-color">
       <button type="submit">Cadastrar 🚗</button>
     </form>
 
