--- a/dia4/app/index.html
+++ b/dia4/app/index.html
@@ -15,7 +15,7 @@
       <label for="car-year">Ano:</label>
       <input required type="number" id="car-year" name="car-year" data-js="car-year">
       <label for="car-license-plate">Placa:</label>
-      <input required type="text" id="car-license-plate" name="car-license-plate" data-js="car-license-plate">
+      <input required pattern="[A-Z]{3}[-][0-9]{4}" type="text" id="car-license-plate" name="car-license-plate" data-js="car-license-plate" placeholder="Formato ABC-1234">
       <label for="car-color">Cor:</label>
       <input required type="text" id="car-color" name="car-color" data-js="car-color">
       <button type="submit">Cadastrar 🚗</button>
@@ -29,9 +29,6 @@
         <th>Placa</th>
         <th>Cor</th>
       </thead>
-      <tbody data-js="table-body">
-
-      </tbody>
     </table>
     <script type="module" src="/main.js"></script>
   </body>
