exercise 3 full completed

--- a/dia4/app/index.html
+++ b/dia4/app/index.html
@@ -21,6 +21,9 @@
       <button type="submit">Cadastrar 🚗</button>
     </form>
 
+    <div class="error-message" data-js="error-message">
+
+    </div>
     <table border="1">
       <thead>
         <th>Imagem</th>
