--- a/dia4/app/index.html
+++ b/dia4/app/index.html
@@ -31,6 +31,7 @@
         <th>Ano</th>
         <th>Placa</th>
         <th>Cor</th>
+        <th>Ação</th>
       </thead>
     </table>
     <script type="module" src="/main.js"></script>
