--- a/dia4/app/index.html
+++ b/dia4/app/index.html
@@ -8,23 +8,24 @@
   </head>
   <body>
     <form data-js="cars-form">
-      <label for="car-image">Imagem (URL):</label>
-      <input required type="text" id="car-image" name="car-image" data-js="car-image">
+      <h1>Vamos cadastrar os carrinhos? 😊</h1>
+      <label for="car-image">Imagem:</label>
+      <input required type="text" id="car-image" name="car-image" data-js="car-image" placeholder="Ex: URLdaImagem.png">
       <label for="car-make-model">Marca/modelo:</label>
-      <input required type="text" id="car-make-model" name="car-make-model" data-js="car-make-model">
+      <input required type="text" id="car-make-model" name="car-make-model" data-js="car-make-model" placeholder="Ex: Fiat/Argo">
       <label for="car-year">Ano:</label>
-      <input required type="number" id="car-year" name="car-year" data-js="car-year">
+      <input required type="number" id="car-year" name="car-year" data-js="car-year" placeholder="Ex: 1999">
       <label for="car-license-plate">Placa:</label>
       <input required pattern="[A-Z]{3}[-][0-9]{4}" type="text" id="car-license-plate" name="car-license-plate" data-js="car-license-plate" placeholder="Formato ABC-1234">
       <label for="car-color">Cor:</label>
-      <input required type="text" id="car-color" name="car-color" data-js="car-color">
-      <button type="submit">Cadastrar 🚗</button>
+      <input required type="text" id="car-color" name="car-color" data-js="car-color" placeholder="Ex: preto">
+      <button type="submit" data-js="submit-btn" class="submit-btn">Cadastrar 🚗</button>
     </form>
 
     <div class="error-message" data-js="error-message">
 
     </div>
-    <table border="1">
+    <table>
       <thead>
         <th>Imagem</th>
         <th>Marca/modelo</th>
